Changed folder structure and fixed bug where the image would be cut off when the app was started with a window blocking it. For example, having the chrome dev console open would result in the image being cutoff

--- a/templates/css/app.css
+++ b/templates/css/app.css
@@ -127,7 +127,6 @@ header {
 
 canvas {
 	padding: 0px;
-	overflow: scroll;
 	/* position: fixed; */
 	background: red; 
 	height: 100%;
@@ -149,7 +148,7 @@ canvas {
 }
 
 #container{
-	background-color: black;
+	background-color: greenyellow;
 	left: 20%;
 	right: 0;
 	top: 50px;
